anna payne is replacing sierra gomez for cos

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,7 +10,7 @@
 notebooks/ACS/*/*/*  @alyssaguzman
 
 # COS Notebooks
-notebooks/COS/*/*/*  @mrafelski
+notebooks/COS/*/*/* @annapayne  @mrafelski 
 
 # DrizzlePac Notebooks
 notebooks/DrizzlePac/*/*/* @mackjenn @mrevalski @bjkuhn
